[gd_scene load_steps=7 format=3 uid="uid://0gdthd31xpjy"]

[ext_resource type="Script" path="res://scripts/controller_ready/controller_ready.gd" id="1_1ey11"]
[ext_resource type="Script" path="res://scripts/controller_ready/player.gd" id="1_cbyd3"]
[ext_resource type="Texture2D" uid="uid://bd1tpjdjtngr0" path="res://assets/sprites/xboxController.png" id="4_tcqul"]
[ext_resource type="FontFile" uid="uid://cgj3e1um315pq" path="res://assets/fonts/Alaric CHarpentier Nuage.ttf" id="5_ctg0k"]
[ext_resource type="AudioStream" uid="uid://emc8gge64v8f" path="res://assets/audio/Menu.mp3" id="6_dgvd8"]
[ext_resource type="AudioStream" uid="uid://dgvmx5jepft44" path="res://assets/audio/Connexion.wav" id="7_jf5wq"]

[node name="ControllerReady" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ey11")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player1" type="PanelContainer" parent="HBoxContainer"]
visible = false
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(576, 0)
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("1_cbyd3")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Player1"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Player1/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Player1/VBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("4_tcqul")

[node name="Label" type="Label" parent="HBoxContainer/Player1/VBoxContainer"]
self_modulate = Color(0.129412, 0.341176, 0.8, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_ctg0k")
theme_override_font_sizes/font_size = 50
text = "PRESS A TO JOIN"

[node name="Player2" type="PanelContainer" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(576, 0)
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("1_cbyd3")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Player2"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/Player2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Player2/VBoxContainer/CenterContainer"]
layout_mode = 2
texture = ExtResource("4_tcqul")

[node name="Label" type="Label" parent="HBoxContainer/Player2/VBoxContainer"]
self_modulate = Color(0.8, 0.129412, 0.129412, 1)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_ctg0k")
theme_override_font_sizes/font_size = 50
text = "PRESS A TO JOIN"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_dgvd8")
autoplay = true
parameters/looping = true

[node name="AudioStreamPlayerLogin" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_jf5wq")

[node name="MainLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -395.5
offset_right = 395.5
offset_bottom = 67.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_ctg0k")
theme_override_font_sizes/font_size = 50
text = "Prêt à jouer ? Branchez deux manettes !"
